--- a/vjezba28/index.html
+++ b/vjezba28/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://kit.fontawesome.com/81b55cd0cc.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/81b55cd0cc.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
     <title>Lista zadataka</title>
@@ -31,7 +34,12 @@
     </form>
 
     <div class="filter">
-      <input type="text" class="form-input-filter" id="filter" placeholder="Filter" />
+      <input
+        type="text"
+        class="form-input-filter"
+        id="filter"
+        placeholder="Filter"
+      />
     </div>
 
     <ul id="zadatak-list" class="zadatak">
@@ -61,6 +69,7 @@
       </li>
     </ul>
 
+    <button class="btn-clear"></button>
     <button id="clear" class="btn-clear">Pobriši sve zadatke</button>
     <a href="#">Klik link</a>
   </body>
