--- a/vjezba56-raz/index.html
+++ b/vjezba56-raz/index.html
@@ -20,5 +20,23 @@
         <button id="btn3" class="btn btn-info">btn 3</button>
       </div>
     </div>
+
+    <div class="row my-3 justify-content-around">
+      <div class="col-sm-3 py-2 bg-danger text-light text-center">stupac 1, red 1</div>
+      <div class="col-sm-3 py-2 bg-danger text-light text-center">stupac 2, red 1</div>
+      <div class="col-sm-3 py-2 bg-danger text-light text-center">stupac 3, red 1</div>
+    </div>
+    <div class="row my-3 justify-content-around">
+      <div class="col-sm-3 py-2 bg-primary text-light text-center">stupac 1, red 2</div>
+      <div class="col-sm-3 py-2 bg-primary text-light text-center">stupac 2, red 2</div>
+      <div class="col-sm-3 py-2 bg-primary text-light text-center">stupac 3, red 2</div>
+    </div>
+    <div class="row my-3 justify-content-around">
+      <div class="col-sm-3 py-2 bg-success text-light text-center">stupac 1, red 3</div>
+      <div class="col-sm-3 py-2 bg-success text-light text-center">stupac 2, red 3</div>
+      <div class="col-sm-3 py-2 bg-success text-light text-center">stupac 3, red 3</div>
+    </div>
+
+    <div id="user-list"></div>
   </body>
 </html>
